[gd_scene load_steps=12 format=3 uid="uid://1vtabgmdqbya"]

[ext_resource type="Script" uid="uid://dkmriobqrw3jy" path="res://7 GUI/Menus/main_menu.gd" id="1_r4jl4"]
[ext_resource type="PackedScene" uid="uid://b7kqgr0bkm3s6" path="res://7 GUI/background_container.tscn" id="2_reh62"]
[ext_resource type="FontFile" uid="uid://bt3eis200qlni" path="res://addons/NotJamFontPack/Not Jam Glasgow 13/Not Jam Glasgow 13.ttf" id="2_u8cqs"]
[ext_resource type="PackedScene" uid="uid://cdaty1tj8c305" path="res://6 Online/lobby.tscn" id="3_ic32f"]
[ext_resource type="Theme" uid="uid://cboyxbggkvdoj" path="res://7 GUI/Menus/Menu.tres" id="6_x13m3"]
[ext_resource type="PackedScene" uid="uid://bglvj405a8scx" path="res://7 GUI/Menus/settings.tscn" id="6_yrws1"]
[ext_resource type="PackedScene" uid="uid://cwd15gx5hshw5" path="res://7 GUI/Menus/match_settings.tscn" id="7_jslx7"]
[ext_resource type="PackedScene" uid="uid://ibr5tw3jo2xn" path="res://7 GUI/disconnected_from_server.tscn" id="8_3wo6v"]
[ext_resource type="WwiseEvent" uid="uid://dk2wdc7661f3o" path="res://Wwise/resources/Event/{53037DEB-F63C-4710-8072-54EFD294BCB0}.tres" id="9_sjt0m"]
[ext_resource type="WwiseEvent" uid="uid://bpc3mfvfm1yrq" path="res://Wwise/resources/Event/{1D0D8EA8-D697-496F-AEEA-239402382028}.tres" id="10_sbu0f"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vaxh2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_x13m3")
script = ExtResource("1_r4jl4")
GAME_SCENE = ExtResource("3_ic32f")

[node name="Background_container" parent="." instance=ExtResource("2_reh62")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.5
offset_right = 344.5
offset_bottom = 111.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="GameTitle"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="GameTitle/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.524336, 0, 0.0730928, 1)
theme_override_fonts/normal_font = ExtResource("2_u8cqs")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][pulse freq=.2 color=#00000009 ease=-2.0][outline_size=9]Absconditum[/outline_size][/pulse][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Menu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -220.0
offset_right = 150.5
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_x13m3")

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="Menu/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer/MarginContainer/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Host" type="Button" parent="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Settings" type="Button" parent="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Match_Settings" parent="." instance=ExtResource("7_jslx7")]
visible = false
layout_mode = 1

[node name="Hitscan" parent="Match_Settings/PanelContainer/CenterContainer/MarginContainer/grid/Player Settings" index="6"]
visible = false

[node name="CenterContainer" parent="Match_Settings/PanelContainer/CenterContainer/MarginContainer/grid/Player Settings" index="7"]
visible = false

[node name="Settings" parent="." instance=ExtResource("6_yrws1")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vaxh2")
}

[node name="Disconnected_from_server" parent="." instance=ExtResource("8_3wo6v")]
visible = false
layout_mode = 1
offset_left = -155.0
offset_top = -25.0
offset_right = -155.0
offset_bottom = -25.0

[node name="AkListener2D" type="AkListener2D" parent="."]

[node name="Music" type="AkEvent2D" parent="."]
event = ExtResource("9_sjt0m")
trigger_on = 2
stop_on = 3

[node name="UiAudio" type="AkEvent2D" parent="."]
event = ExtResource("10_sbu0f")

[connection signal="mouse_entered" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Host" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="mouse_entered" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Join" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="mouse_entered" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Settings" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Menu/CenterContainer/MarginContainer/VSplitContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Match_Settings/PanelContainer/CenterContainer/MarginContainer/grid/Match_Back_button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Match_Settings/PanelContainer/CenterContainer/MarginContainer/grid/Match_Back_button" to="." method="_on_match_back_button_pressed"]
[connection signal="mouse_entered" from="Match_Settings/PanelContainer/CenterContainer/MarginContainer/grid/Host_game_button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Match_Settings/PanelContainer/CenterContainer/MarginContainer/grid/Host_game_button" to="." method="_on_host_game_button_pressed"]
[connection signal="pressed" from="Settings/BackButton/Settings_Back_Button" to="." method="_on_settings_back_button_pressed"]
[connection signal="music_sync_exit" from="Music" to="." method="_on_music_music_sync_exit"]

[editable path="Match_Settings"]
[editable path="Settings"]
